--- a/ui/templates/ui/foot.html
+++ b/ui/templates/ui/foot.html
@@ -1,8 +1,9 @@
 <footer><div class="container">
     <ul class="list-inline">
-      <li><a href="https://github.com/liyao001/BioQueue">GitHub Repository</a></li>
-      <li><a href="https://bioqueue.readthedocs.io/en/latest/">Documentation</a></li>
-      <li><a href="https://github.com/liyao001/BioQueue/issues">Having Problems?</a></li>
+        <li><a href="http://www.bioqueue.org" target="_blank">Homepage</a></li>
+        <li><a href="https://github.com/liyao001/BioQueue">GitHub Repository</a></li>
+        <li><a href="https://bioqueue.readthedocs.io/en/latest/">Documentation</a></li>
+        <li><a href="https://github.com/liyao001/BioQueue/issues">Having Problems?</a></li>
     </ul>
     <p>
     BioQueue is licensed under the <a href="https://github.com/liyao001/BioQueue/blob/master/LICENSE">Apache License 2.0</a>. The documentation is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.
