--- a/ui/templates/ui/install_tool.html
+++ b/ui/templates/ui/install_tool.html
@@ -106,6 +106,7 @@
                         <div class="form-group">
                             <label for="version">Compression method </label>
                             <input type="text" class="form-control" id="compression" name="compression" />
+                            <p class="help-block"><i>e.g. </i>targz, tarbz2, zip. Enter "n" for uncompressed plain file.</p>
                         </div>
                         <div class="form-group">
                             <label for="compile_method">Compile method </label>
