--- a/ui/templates/ui/query_job.html
+++ b/ui/templates/ui/query_job.html
@@ -61,7 +61,7 @@
                         <li><b>Job parameters:</b> <span style="word-wrap: break-word;">{{ job.parameter }}</span></li>
                         <li><b>Create time:</b> {{ job.create_time }}</li>
                         <li><b>Last update:</b> {{ job.update_time }}</li>
-                        <li><span class="label label-info show-folder" onclick="showFolder({{ job.id }});"><i class="icon-folder-open"></i> Show output files</span></li>
+                        <li><span class="label label-info show-folder" onclick="showFolder({{ job.id }});" data-toggle="tooltip" data-placement="top" title="{{ job.result }}"><i class="icon-folder-open"></i> Show output files</span></li>
                     </ul></p>
                         <p class="text-center">{% if job.status == -1 %}
                             <button data-jid="{{ job.id }}" style="cursor:pointer;" class="btn btn-danger" onclick="delJob(this);"><i class='icon-trash icon-white'></i> Delete</button> <button data-jid="{{ job.id }}" style="cursor:pointer;" class="btn btn-info" onclick="reRunJob(this);"><i class='icon-repeat icon-white'></i> Rerun</button>
@@ -148,6 +148,9 @@
         beforeSend: function(xhr, settings){
             xhr.setRequestHeader("X-CSRFToken", csrftoken);
         }
+    });
+    $(function () {
+        $('[data-toggle="tooltip"]').tooltip();
     });
     function delJob(obj){
         var self = $(obj);
