--- a/ui/templates/ui/query_job.html
+++ b/ui/templates/ui/query_job.html
@@ -30,7 +30,7 @@
             {% if job_list %}
             {% for job in job_list %}
             <div class="col-sm-6 col-md-4">
-                <div class="thumbnail job-panel">
+                <div class="thumbnail job-panel" id="job-panel-{{ job.id }}">
                     <div class="caption">
                         <div class="text-center">{% if job.status == -1 %}
                             <i class="icon-ok icon-3x"></i>
@@ -77,7 +77,7 @@
                         {% elif job.status == -3 %}
                             <div class="btn-group" role="group" aria-label="...">
                                 <button data-jid="{{ job.id }}" style="cursor:pointer;" class="btn btn-danger" onclick="delJob(this);" data-toggle="tooltip" data-placement="top" title="Delete"><i class='icon-trash icon-white'></i></button>
-                                <button data-jid="{{ job.id }}" style="cursor:pointer;" class="btn btn-warning" onclick="$('#resume-{{ job.id }}').show();" data-toggle="tooltip" data-placement="top" title="Rollback"><i class='icon-share-alt icon-white'></i></button>
+                                <button data-jid="{{ job.id }}" style="cursor:pointer;" class="btn btn-warning" onclick="showResumePanel({{ job.id }});" data-toggle="tooltip" data-placement="top" title="Rollback"><i class='icon-share-alt icon-white'></i></button>
                                 <button data-jid="{{ job.id }}" style="cursor:pointer;" class="btn btn-success" onclick="resumeJob(this, {{ job.resume }});" data-toggle="tooltip" data-placement="top" title="Resume"><i class='icon-play icon-white'></i></button>
                                 <button data-jid="{{ job.id }}" style="cursor:pointer;" class="btn btn-info" onclick="reRunJob(this);" data-toggle="tooltip" data-placement="top" title="Rerun"><i class='icon-repeat icon-white'></i></button>
                             </div>
@@ -219,6 +219,10 @@
             };
         });
 	};
+    function showResumePanel(job){
+        $('#resume-'+job).show();
+        $('#job-panel-'+job).animate({scrollTop:$('#resume-'+job).offset().top},1000);
+    }
     function resumeJob(obj, spec=0){
         var self = $(obj);
         var jid = self.attr("data-jid");
