--- a/ui/templates/ui/query_job.html
+++ b/ui/templates/ui/query_job.html
@@ -78,7 +78,7 @@
                             <div class="btn-group" role="group" aria-label="...">
                                 <button data-jid="{{ job.id }}" style="cursor:pointer;" class="btn btn-danger" onclick="delJob(this);" data-toggle="tooltip" data-placement="top" title="Delete"><i class='icon-trash icon-white'></i></button>
                                 <button data-jid="{{ job.id }}" style="cursor:pointer;" class="btn btn-warning" onclick="showResumePanel({{ job.id }});" data-toggle="tooltip" data-placement="top" title="Rollback"><i class='icon-share-alt icon-white'></i></button>
-                                <button data-jid="{{ job.id }}" style="cursor:pointer;" class="btn btn-success" onclick="resumeJob(this, {{ job.resume }});" data-toggle="tooltip" data-placement="top" title="Resume"><i class='icon-play icon-white'></i></button>
+                                <button data-jid="{{ job.id }}" style="cursor:pointer;" class="btn btn-success" onclick="resumeJob(this, {{ job.resume|add:2 }});" data-toggle="tooltip" data-placement="top" title="Resume"><i class='icon-play icon-white'></i></button>
                                 <button data-jid="{{ job.id }}" style="cursor:pointer;" class="btn btn-info" onclick="reRunJob(this);" data-toggle="tooltip" data-placement="top" title="Rerun"><i class='icon-repeat icon-white'></i></button>
                             </div>
                             <div class="text-left" id="resume-{{ job.id }}" style="display: none;">
