min-width: 70px;

--- a/ui/templates/ui/show_steps.html
+++ b/ui/templates/ui/show_steps.html
@@ -1,7 +1,7 @@
 <table class="table table-bordered">
     <thead>
         <tr>
-            <th>Order</th>
+            <th style="min-width: 70px;">Order</th>
             <th>Software</th>
             <th>Parameter</th>
             <th>Check point</th>
