--- a/ui/templates/ui/query_job.html
+++ b/ui/templates/ui/query_job.html
@@ -58,6 +58,7 @@
                             Running (Step {{ job.status }})
                         {% endif %}</span></li>
                         <li><b>Input files:</b> <span style="word-wrap: break-word;">{{ job.input_file }}</span></li>
+                        <li><b>Protocol:</b> <span style="word-wrap: break-word;">{{ job.protocol }}</span></li>
                         <li><b>Job parameters:</b> <span style="word-wrap: break-word;">{{ job.parameter }}</span></li>
                         <li><b>Create time:</b> {{ job.create_time }}</li>
                         <li><b>Last update:</b> {{ job.update_time }}</li>
