--- a/ui/templates/ui/show_steps.html
+++ b/ui/templates/ui/show_steps.html
@@ -26,7 +26,7 @@
                 <span class="label label-success disk" data-hash="{{ step.hash }}" onclick="showML(this);" style="cursor:pointer;">Disk</span>
             </td>
             <td>
-                <span class="user-actions"><span class="label label-danger dels" data-sid="{{ step.id }}">Delete</span></span>
+                <span class="user-actions"><span class="label label-danger dels" style="cursor: pointer;" data-sid="{{ step.id }}">Delete</span></span>
                 <span class="user-actions"><a href="/admin/ui/prediction" class="label label-info">Edit Checkpoint</a></span>
             </td>
         </tr>
